// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorySource customTitle 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id="story-source"
    >
      <div
        class="css-xhp9da"
      >
        <a
          class="css-walqom-LinkHeading"
          data-id="story-source"
          data-level="3"
          data-title="Story source"
          href="http://localhost/#story-source"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="18"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h3
          class="css-16ist9v-BlockContainer"
        >
          <div
            class="css-tmrrvx"
          >
            Story source
            <a
              aria-label="Collapse this block"
              class="css-1t48u3b-BlockContainer"
            >
              <span
                class="css-1ibxxpj"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </div>
        </h3>
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="css-1tf4h46"
                >
                  copy
                </button>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse repository"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse readme documentation"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse filed issues"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <pre
              class="prism-code language-jsx css-3y8hb3"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token operator css-13aqjzy"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  'hello'
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource noMargin 1`] = `
<DocumentFragment>
  <div
    class="css-7wa6r1-StoryBlockContainer"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="css-1tf4h46"
                >
                  copy
                </button>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse repository"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse readme documentation"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse filed issues"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <pre
              class="prism-code language-jsx css-3y8hb3"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token operator css-13aqjzy"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  'hello'
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource notCollapsible 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id="id-of-story"
    >
      <div
        class="css-xhp9da"
      >
        <a
          class="css-1ptrway-LinkHeading"
          data-id="id-of-story"
          data-level="4"
          data-title="story"
          href="http://localhost/#id-of-story"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h4
          class="css-vsfm4-BlockContainer"
        >
          story
        </h4>
      </div>
    </div>
    <div>
      <div
        class="css-15owl46"
      >
        <div
          class="css-x60p33"
        >
          <div
            class="css-1vga9oy"
          >
            <button
              aria-label="copy the displayed source code"
              class="css-1tf4h46"
            >
              copy
            </button>
          </div>
          <div
            class="css-q7w4rh"
          >
            <a
              aria-label="browse repository"
              class="css-1t54e2w"
              href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
              rel="noopener noreferrer"
              target="_blank"
            >
              browse
            </a>
          </div>
          <div
            class="css-q7w4rh"
          >
            <a
              aria-label="browse readme documentation"
              class="css-1t54e2w"
              href="https://github.com/ccontrols/component-controls/tree/master#readme"
              rel="noopener noreferrer"
              target="_blank"
            >
              docs
            </a>
          </div>
          <div
            class="css-q7w4rh"
          >
            <a
              aria-label="browse filed issues"
              class="css-1t54e2w"
              href="https://github.com/ccontrols/component-controls/issues"
              rel="noopener noreferrer"
              target="_blank"
            >
              issues
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-eqxzio"
      >
        <pre
          class="prism-code language-jsx css-3y8hb3"
          style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
        >
          <div
            class="token-line"
            style="color: rgb(114, 143, 203);"
          >
            <span
              class="token punctuation css-13aqjzy"
              style="color: rgb(182, 173, 154);"
            >
              (
            </span>
            <span
              class="token punctuation css-13aqjzy"
              style="color: rgb(182, 173, 154);"
            >
              )
            </span>
            <span
              class="token plain css-13aqjzy"
            >
               
            </span>
            <span
              class="token operator css-13aqjzy"
              style="color: rgb(6, 50, 137);"
            >
              =&gt;
            </span>
            <span
              class="token plain css-13aqjzy"
            >
               
            </span>
            <span
              class="token string css-13aqjzy"
              style="color: rgb(114, 143, 203);"
            >
              'hello'
            </span>
          </div>
        </pre>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="css-1tf4h46"
                >
                  copy
                </button>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse repository"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse readme documentation"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="css-7d11p2"
              >
                <a
                  aria-label="browse filed issues"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
              <div
                class="css-7d11p2"
              >
                <button
                  class="css-1tf4h46"
                >
                  values
                </button>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <pre
              class="prism-code language-jsx css-3y8hb3"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  {
                </span>
                 
                <span
                  class="token parameter css-ldhfal-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  ,
                </span>
                 
                <span
                  class="token parameter css-u2xcrg-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    age
                  </span>
                </span>
                 
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token operator css-13aqjzy"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token plain css-13aqjzy"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token plain css-13aqjzy"
                >
                    
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  &lt;
                </span>
                <span
                  class="token tag css-13aqjzy"
                  style="color: rgb(6, 50, 137);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  &gt;
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  {
                </span>
                <span
                  class="token template-string template-punctuation string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  \`
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  Hello, my name is 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation css-ldhfal-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  , and I am 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation css-u2xcrg-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    age
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                   years old.
                </span>
                <span
                  class="token template-string template-punctuation string css-13aqjzy"
                  style="color: rgb(114, 143, 203);"
                >
                  \`
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag css-13aqjzy"
                  style="color: rgb(6, 50, 137);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  &gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token plain css-13aqjzy"
                />
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(182, 173, 154);"
                >
                  ;
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource theme 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="css-1tf4h46"
                >
                  copy
                </button>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse repository"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="css-q7w4rh"
              >
                <a
                  aria-label="browse readme documentation"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="css-7d11p2"
              >
                <a
                  aria-label="browse filed issues"
                  class="css-1t54e2w"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
              <div
                class="css-7d11p2"
              >
                <button
                  class="css-1tf4h46"
                >
                  values
                </button>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <pre
              class="prism-code language-jsx css-3y8hb3"
              style="color: rgb(158, 254, 255); background-color: rgb(45, 42, 85); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  (
                </span>
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  {
                </span>
                 
                <span
                  class="token parameter css-1i9wh6i-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  ,
                </span>
                 
                <span
                  class="token parameter css-3fldth-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    age
                  </span>
                </span>
                 
                <span
                  class="token parameter punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  )
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token operator css-13aqjzy"
                  style="color: rgb(255, 157, 0);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                >
                   
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  (
                </span>
                <span
                  class="token plain css-13aqjzy"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token plain css-13aqjzy"
                >
                    
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  &lt;
                </span>
                <span
                  class="token tag css-13aqjzy"
                  style="color: rgb(255, 157, 0);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  &gt;
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  {
                </span>
                <span
                  class="token template-string template-punctuation string css-13aqjzy"
                  style="color: rgb(165, 255, 144);"
                >
                  \`
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(165, 255, 144);"
                >
                  Hello, my name is 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation css-1i9wh6i-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(165, 255, 144);"
                >
                  , and I am 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation css-3fldth-Tag"
                >
                  <span
                    class="css-vurnku"
                  >
                    age
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token template-string string css-13aqjzy"
                  style="color: rgb(165, 255, 144);"
                >
                   years old.
                </span>
                <span
                  class="token template-string template-punctuation string css-13aqjzy"
                  style="color: rgb(165, 255, 144);"
                >
                  \`
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag css-13aqjzy"
                  style="color: rgb(255, 157, 0);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  &gt;
                </span>
                <span
                  class="token plain css-13aqjzy"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token plain css-13aqjzy"
                />
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  )
                </span>
                <span
                  class="token punctuation css-13aqjzy"
                  style="color: rgb(255, 255, 255);"
                >
                  ;
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource themeSelector 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-15owl46"
    >
      <div
        class="css-x60p33"
      >
        <div
          class="css-1vga9oy"
        >
          <button
            class="css-1tf4h46"
          >
            dracula
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-eqxzio"
    >
      <div
        class="css-1xkyebe"
      >
        <div
          class="css-jxxswp"
          id=""
        >
          <div
            class="css-xhp9da"
          >
            <h3
              class="css-16ist9v-BlockContainer"
            />
          </div>
        </div>
        <div
          aria-hidden="false"
          class="rah-static rah-static--height-auto"
          style="height: auto; overflow: visible;"
        >
          <div>
            <div>
              <div
                class="css-15owl46"
              >
                <div
                  class="css-x60p33"
                >
                  <div
                    class="css-1vga9oy"
                  >
                    <button
                      aria-label="copy the displayed source code"
                      class="css-1tf4h46"
                    >
                      copy
                    </button>
                  </div>
                  <div
                    class="css-q7w4rh"
                  >
                    <a
                      aria-label="browse repository"
                      class="css-1t54e2w"
                      href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      browse
                    </a>
                  </div>
                  <div
                    class="css-q7w4rh"
                  >
                    <a
                      aria-label="browse readme documentation"
                      class="css-1t54e2w"
                      href="https://github.com/ccontrols/component-controls/tree/master#readme"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      docs
                    </a>
                  </div>
                  <div
                    class="css-7d11p2"
                  >
                    <a
                      aria-label="browse filed issues"
                      class="css-1t54e2w"
                      href="https://github.com/ccontrols/component-controls/issues"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      issues
                    </a>
                  </div>
                  <div
                    class="css-7d11p2"
                  >
                    <button
                      class="css-1tf4h46"
                    >
                      values
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="css-eqxzio"
              >
                <pre
                  class="prism-code language-jsx css-3y8hb3"
                  style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54); padding: 25px 10px 10px; margin: 0px;"
                >
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      (
                    </span>
                    <span
                      class="token parameter punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      {
                    </span>
                     
                    <span
                      class="token parameter css-1uynce5-Tag"
                    >
                      <span
                        class="css-vurnku"
                      >
                        name
                      </span>
                    </span>
                    <span
                      class="token parameter punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      ,
                    </span>
                     
                    <span
                      class="token parameter css-11mur5a-Tag"
                    >
                      <span
                        class="css-vurnku"
                      >
                        age
                      </span>
                    </span>
                     
                    <span
                      class="token parameter punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      )
                    </span>
                    <span
                      class="token plain css-13aqjzy"
                    >
                       
                    </span>
                    <span
                      class="token operator css-13aqjzy"
                    >
                      =&gt;
                    </span>
                    <span
                      class="token plain css-13aqjzy"
                    >
                       
                    </span>
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      (
                    </span>
                    <span
                      class="token plain css-13aqjzy"
                    />
                  </div>
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token plain css-13aqjzy"
                    >
                        
                    </span>
                    <span
                      class="token tag punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      &lt;
                    </span>
                    <span
                      class="token tag css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      h2
                    </span>
                    <span
                      class="token tag punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      {
                    </span>
                    <span
                      class="token template-string template-punctuation string css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      \`
                    </span>
                    <span
                      class="token template-string string css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      Hello, my name is 
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      \${
                    </span>
                    <span
                      class="token template-string interpolation css-1uynce5-Tag"
                    >
                      <span
                        class="css-vurnku"
                      >
                        name
                      </span>
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token template-string string css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      , and I am 
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      \${
                    </span>
                    <span
                      class="token template-string interpolation css-11mur5a-Tag"
                    >
                      <span
                        class="css-vurnku"
                      >
                        age
                      </span>
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token template-string string css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                       years old.
                    </span>
                    <span
                      class="token template-string template-punctuation string css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      \`
                    </span>
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token tag punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      &lt;/
                    </span>
                    <span
                      class="token tag css-13aqjzy"
                      style="color: rgb(255, 121, 198);"
                    >
                      h2
                    </span>
                    <span
                      class="token tag punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain css-13aqjzy"
                    />
                  </div>
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token plain css-13aqjzy"
                    />
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      )
                    </span>
                    <span
                      class="token punctuation css-13aqjzy"
                      style="color: rgb(248, 248, 242);"
                    >
                      ;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
